# MastersThesis

./: .gitignore  README.md
ROSE3D/: README.md  ROSE.py  ROSE3D.py  args.py  converter.py  fft_structure_extraction.py  inverter.py  jsonHandler.py  main.py  naive_projection.py  partitioned.py  pgmROSE.py  pngROSE.py  utils.py  visualisation.py  yamlHandler.py
ROSE3D/input/: rose_json.json
ROSE3D/settings/: run_settings.json
Shelf-Detection/: CMakeLists.txt  README.md  boundingboxes.cpp  converter.cpp  main.cpp  merger.cpp  radius-segment.cpp  shelf-detection.cpp  visualization.cpp
Shelf-Detection/include/: boundingbox.hpp  file.hpp  parameters.hpp  pole.hpp  radius-segment.hpp  settings_loader.hpp  shelf-detection.hpp
Shelf-Detection/result/: shelves.json
Shelf-Detection/settings/: settings.json
